samples/_failures_safe/1761157047_2edb30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb1340f1.c: In function ‘main’:
./samples/SAFE/__tmp_fb1340f1.c:179:5: error: ‘initialize’ undeclared (first use in this function)
  179 |     initialize
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_fb1340f1.c:179:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fb1340f1.c:179:15: error: expected ‘;’ at end of input
  179 |     initialize
      |               ^
      |               ;
./samples/SAFE/__tmp_fb1340f1.c:179:5: error: expected declaration or statement at end of input
  179 |     initialize
      |     ^~~~~~~~~~
